--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.4",
+    "@mui/x-date-pickers": "^5.0.17",
+    "dayjs": "^1.11.7",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,8 +23,8 @@
   "scripts": {
     "start": "webpack-dev-server --open",
     "build": "webpack",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -54,10 +56,15 @@
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "interpolate-html-plugin": "^4.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.7.2",
     "react-toastify": "^9.1.1",
     "source-map-loader": "^4.0.1",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
